# dockerswarm_easydeploy

./: .dockerignore  .gitignore  .pdm.toml  Dockerfile.client  README.md  compose.yml  manage.py  pre_build.sh  pyproject.toml  readme.md  requirments.txt  setup.py
src/: .gitignore  docker_swarm_easy_deploy_proto.proto
src/dockerswarm_easydeploy/: asgi.py  settings.py  urls.py  wsgi.py
src/dockerswarm_easydeploy/apps/core/: apps.py  urls.py
src/dockerswarm_easydeploy/apps/core/action/: base_action.py  deploy_dependence.py  deploy_stack.py  docker_image_info.py
src/dockerswarm_easydeploy/apps/core/admin/: __init__.py  env_item.py  export_config.py  image.py  network.py  node.py  node_group.py  service_config.py  service_deploy_policy.py  service_export_policy.py  stack.py  volume_claim.py
src/dockerswarm_easydeploy/apps/core/api/node/: register.py
src/dockerswarm_easydeploy/apps/core/management/commands/: deploy_docker.py  init_proxy.py  upload_file.py
src/dockerswarm_easydeploy/apps/core/migrations/: 0001_initial.py  0002_imagemodel_work_dir_alter_imagemodel_entrypoint.py  0002_rename_serviceexportpolicy_serviceexportpolicymodel_and_more.py  0002_serviceenvconfigmodel_serviceconfigmodel_env_set_and_more.py  0003_nodemanagepointmodel_serviceportconfigmodel_and_more.py  0003_rename_imagelabel_imagelabelmodel_and_more.py  0003_serviceexportpolicyitemmodel_sni_name_and_more.py  0004_serviceconfigmodel_service_id_and_more.py  0005_serviceconfigmodel_cmds_and_more.py  0006_stackconfigmodel_is_inner.py  0007_networkmodel.py  0008_nodelocalnetworkmodel_servicenetworkmodel_and_more.py
src/dockerswarm_easydeploy/apps/core/models/: __init__.py  env_item.py  export_config.py  image.py  network.py  node.py  node_local_network.py  service_config.py  service_deploy_policy.py  service_env_config.py  service_export_policy.py  service_export_policy_item.py  service_network.py  service_port_config.py  service_volume.py  stack_config.py  volume_claim.py
src/dockerswarm_easydeploy_client/: __main__.py  pb_json_encoder.py  service.py
src/dockerswarm_easydeploy_client/image/: image_info.py  test_image_info.py
src/dockerswarm_easydeploy_proto/: client.proto
